--- a/php/yii2教程/2.页面布局.md
+++ b/php/yii2教程/2.页面布局.md
@@ -70,6 +70,24 @@
 访问地址 http://127.0.0.1/song/basic/web/index.php?r=index/index
 没有问题的话 出现 hello world
 
+### 扩展
+
+1. 在视图中调用其他模板
+
+		视图/布局文件中
+		<!--公共底部-->
+		<?=$this->render('footer')?>  
+
+2. 在页面中有些特定的块，如果存在则显示
+
+		布局文件中
+		<?php if($this->blocks['header']){echo $this->blocks['header'];}?>
+		
+		视图
+		<?php $this->beginBlock('header');  ?>
+		<link rel="stylesheet" href="<?=Url::base()?>/datatables/css/dataTables.bootstrap.min.css">
+		<?php $this->endBlock(); ?>
+
 **小贴士**
 
 a. 要渲染控制器中的视图，可以使用下面的方法：
