--- a/php/yii2教程/2.页面布局.md
+++ b/php/yii2教程/2.页面布局.md
@@ -82,13 +82,13 @@
 
 		布局文件中
 		<?php if($this->blocks['header']){echo $this->blocks['header'];}?>
-		
+
 		视图
 		<?php $this->beginBlock('header');  ?>
 		<link rel="stylesheet" href="<?=Url::base()?>/datatables/css/dataTables.bootstrap.min.css">
 		<?php $this->endBlock(); ?>
 
-**小贴士**
+### 小贴士
 
 a. 要渲染控制器中的视图，可以使用下面的方法：
 
