--- a/php/yii2教程/4.数据库的使用-DAO.md
+++ b/php/yii2教程/4.数据库的使用-DAO.md
@@ -4,7 +4,7 @@
 
 ### 数据库访问对象（Database Access Objects）
 
-### 创建---对象
+### 创建DAO对象
 
 1. 创建组件的方式
 
@@ -112,7 +112,7 @@ db.php
 	    $command->bindValue(':id', 3);
 	    $article = $command->queryAll();
 
-2. 绑架变量 多次查询 (循环中)
+2. 绑定变量 多次查询 (循环中)
 
 		$command = Yii::$app->db->createCommand('SELECT * FROM {{%article}} WHERE id=:id');
 		$command->bindParam(':id', $id);
