--- a/php/yii2教程/7.数据库的使用-数据验证.md
+++ b/php/yii2教程/7.数据库的使用-数据验证.md
@@ -25,7 +25,7 @@
 		        ['status', 'boolean'],
 
 		        // 验证码错误
-		        ['verifyCode', 'captcha', 'message'=>'验证码错误'],  
+		        ['verifyCode', 'captcha', 'message'=>'验证码错误','captchaAction'=>'index/captcha'],  
 
 		        // 对比
 		        // 和上一个相同，只是明确指定了需要对比的属性字段
