--- a/php/yii2教程/3.资源加载.md
+++ b/php/yii2教程/3.资源加载.md
@@ -121,3 +121,19 @@
 	<script src="<?=AppAsset::getBaseUrl()?>/ace_components/bootstrap/dist/js/bootstrap.js"></script>
 
 
+### 内嵌脚本
+
+	/*js*/
+	$this->registerJs("alert(123);", View::POS_END, 'tag01');
+
+	// 可选参数
+    View::POS_HEAD 用在HEAD部分。
+    View::POS_BEGIN 用在 <body> 标签的右边。
+    View::POS_END 用在 </body> 标签的左边。
+    View::POS_READY 为了在 ready 事件中执行代码，这里将自动注册jQuery。
+    View::POS_LOAD 为了在 load 事件中执行代码，这里将自动注册jQuery。
+	
+	// tag01 是标示  如果标示相同，则替换
+
+	/*css*/
+	$this->registerCss("body { background: #f00; }");
