--- a/php/yii2教程/17.事件.md
+++ b/php/yii2教程/17.事件.md
@@ -2,7 +2,7 @@
 
 以basic为例子
 
-tip : 事件，就是把代码 抽离出来 定好名称，在指定的地方 触发该名字调用
+Tip : 事件，就是把代码 抽离出来 定好名称，在指定的地方 触发该名字调用
 
 场景：如果当用户注册后要去处理10件事情，我们一直要往save()下面塞逻辑？
 
