--- a/php/tp5教程/1.安装.md
+++ b/php/tp5教程/1.安装.md
@@ -63,4 +63,19 @@
 
 只需将框架放到 web 服务器下，就可以运行。（比yii简单多了）
 
+访问地址为 http://127.0.0.1/tp5/public/index.php 
 
+如果没问题 应该可以看到 以下的界面
+
+:)
+
+ThinkPHP V5
+十年磨一剑 - 为API开发设计的高性能框架
+
+[ V5.0 版本由 七牛云 独家赞助发布 ]
+
+### 关于 web 服务器
+
+> PHP5.4以上版本（注意：PHP5.4dev版本和PHP6均不支持）
+
+> WEB服务器是否正常启动
