--- a/php/tp5教程/2.架构.md
+++ b/php/tp5教程/2.架构.md
@@ -67,7 +67,7 @@ http://serverName/index.php（或者其它应用入口文件）/模块/控制器
 	'action_convert'    =>  true, //对 action 的 (服了，自动生成里没有)
 
 
-4、 命名空间
+### 命名空间
 	
 	在项目下 新建文件夹 plugin ， extend 是默认注册好的
 	
@@ -153,7 +153,7 @@ Util.php---文件
 	$Test->sayHello();
 
 
-5、 类库导入
+### 类库导入
 	
 目录
 
@@ -179,7 +179,7 @@ Util.php---文件
 	$Test = new \Util();
 	$Test->sayHello();
 
-5、 输出格式
+### 输出格式
 
 
 	config('default_return_type','json');
