--- a/php/tp5教程/3.配置.md
+++ b/php/tp5教程/3.配置.md
@@ -1,3 +1,46 @@
-## thinkphp5 教程 -- 盆子和
+## thinkphp5 教程 -- 配置
 
-### 访问
+### 加载
+
+1、 目录
+
+	├─application           应用目录（可设置）
+		│  ├─extra            	配置目录
+		│  │  ├─user.php      	额外配置文件
+		│  │  ...
+		│  ├─index              模块目录(可更改)
+		│  │  ├─config.php      模块配置文件
+		│  │  ├─local.php      模块状态文件
+		│  ├─config.php         应用（公共）配置文件
+		│  ├─database.php       数据库配置文件
+		│  ├─local.php       	应用（公共）状态文件
+		│  ├─param.php       	自定义配置
+
+2、 场景 （例如本地，测试，预上线，上线）
+
+    // 应用模式状态
+    'app_status'             => 'local',
+	
+	那么就会自动加载该状态对应的配置文件,覆盖原来的位置（位于application/local.php）和 （位于application/模块/local.php）
+
+
+3、 额外配置
+
+	在 extra 目录中，下面的文件 会以 文件名为键值 返回的数组为内容，放在 config 数组中
+
+4、 手动加载配置
+
+	\think\Config::load(APP_PATH.'param.php');
+
+5、 配置操作
+	
+	获取
+	config('database');
+	config('database.type');
+	
+	设置
+	config('配置参数','配置值');
+	config('database.type','ok');
+
+	查看所有配置
+	dump(config());
