--- a/php/tp5教程/1.安装.md
+++ b/php/tp5教程/1.安装.md
@@ -13,7 +13,7 @@
 
 	project  应用部署目录
 	├─application           应用目录（可设置）
-	│  ├─extra            	配置目录
+	│  ├─extra            	额外配置目录
 	│  ├─index              模块目录(可更改)
 	│  │  ├─config.php      模块配置文件
 	│  │  ├─common.php      模块函数文件
