--- a/php/tp5教程/2.架构.md
+++ b/php/tp5教程/2.架构.md
@@ -28,6 +28,9 @@ http://serverName/index.php（或者其它应用入口文件）/模块/控制器
 	// 绑定当前访问到index模块
 	define('BIND_MODULE','index'); 就好了。
 
+	//修改入口应用名称
+	define('APP_PATH', __DIR__ . '/../apps/');
+
 
 3、 URL大小写
 	
