--- a/php/tp5教程/4.控制器.md
+++ b/php/tp5教程/4.控制器.md
@@ -103,20 +103,27 @@ controller/Article.php -- 文件
 	        echo 'three<br/>';
 	    }
 
-	    public function index()
-	    {
-			
-			<!-- 控制器分层调用 -->
-	    	$event = \think\Loader::controller('User', 'event');
-	    	// $event = \think\Loader::controller('admin/User', 'event');
+		public function index()
+		{
+
+			$event = \think\Loader::controller('User', 'event');
+			// $event = \think\Loader::controller('admin/User', 'event');
 			echo $event->send_email('111@163.com'); 
 			echo $event->send_oa(1); 
 
 			echo action('User/send_oa', ['id' => 5], 'event'); // 输出 update:5
 
+			/*赋值*/
+			$data = ['hello'=>'hello'];
+		    $this->assign($data);
 
-	        return $this->fetch();
-	    }
+		    /*赋值 会被assign覆盖*/
+			\think\View::share(['hello'=>'value','name2'=>'value2']);
+
+		    return $this->fetch();
+		    /*跨模块渲染*/
+		    // return $this->fetch('admin@member/edit');
+		}
 
 	    public function test(){
 	    	/*成功跳转*/
@@ -157,9 +164,20 @@ view/article/index.html -- 文件
 		<title>Document</title>
 	</head>
 	<body>
-		分层控制器在视图中使用
+
+		
+		{$hello}
 		{:action('Upload/image', ['name' => 'think'], 'widget')}
 		{:widget('Upload/image', ['name' => 'think'])}
+
+	<pre>
+	__ROOT__   => /tp5/public
+	__URL__    => /tp5/public/index.php/index/article
+	__STATIC__ => /tp5/public/static
+	__CSS__    => /tp5/public/static/css
+	__JS__     => /tp5/public/static/js
+	</pre>
+
 	</body>
 	</html>
 
