--- a/php/tp5教程/4.控制器.md
+++ b/php/tp5教程/4.控制器.md
@@ -123,6 +123,8 @@ controller/Article.php -- 文件
 		    return $this->fetch();
 		    /*跨模块渲染*/
 		    // return $this->fetch('admin@member/edit');
+			/*全路径*/
+			// return $view->fetch(APP_PATH.request()->module().'/view/public/header.html');
 		}
 
 	    public function test(){
