--- a/php/tp5教程/9.1.权限控制-Auth.md
+++ b/php/tp5教程/9.1.权限控制-Auth.md
@@ -10,14 +10,24 @@
 	  `title` char(20) NOT NULL DEFAULT '' COMMENT '规则中文名称',
 	  `is_menu` tinyint(1) NOT NULL DEFAULT '1' COMMENT '是否为菜单',
 	  `pid` int(11) NOT NULL DEFAULT '0' COMMENT '上级ID',
+	  `icon` char(30) NOT NULL COMMENT '字体图标',
 	  `status` tinyint(1) NOT NULL DEFAULT '1',
 	  `condition` char(100) NOT NULL DEFAULT '' COMMENT '规则表达式，为空表示存在就验证，不为空表示按照条件验证',
 	  PRIMARY KEY (`id`),
-	  UNIQUE KEY `name` (`name`)
-	) ENGINE=MyISAM AUTO_INCREMENT=2 DEFAULT CHARSET=utf8 COMMENT='规则表';
+	  UNIQUE KEY `name_pid` (`name`,`pid`) USING BTREE
+	) ENGINE=MyISAM AUTO_INCREMENT=9 DEFAULT CHARSET=utf8 COMMENT='规则表';
+
 	
 	//可以带参数验证
-	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `status`, `condition`) VALUES ('1', 'Backend/Index/index?ajax=1', '首页', '1', '0', '1', '{status}=1');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('1', 'Backend/Index/index', '首页', '1', '0', '', '1', '{status}=1');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('2', 'Backend/System/index', '系统管理', '1', '0', '', '1', '');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('3', 'Backend/System/index', '系统配置', '1', '2', '&#xe62e;', '1', '');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('4', 'Backend/System/index', '系统配置', '1', '3', '', '1', '');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('5', 'Backend/System/outWord', '屏蔽词', '1', '3', '', '1', '');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('6', 'Backend/Admin/index', '管理员', '1', '2', '&#xe62d;', '1', '');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('7', 'Backend/Admin/index', '管理员', '1', '6', '', '1', '');
+	INSERT INTO `tp_auth_rule` (`id`, `name`, `title`, `is_menu`, `pid`, `icon`, `status`, `condition`) VALUES ('8', 'Backend/AdminRule/index', '权限管理', '1', '6', '', '1', '');
+
 
 
 ###用户组表
@@ -229,7 +239,73 @@
 	        return $userinfo[$uid];
 	    }
 
+	    /**
+	     * 获得菜单树
+	     * @param integer $uid  用户id
+	     */
+	    public function getMenu($uid) {
+	        static $_authList = array(); //保存用户验证通过的权限列表
+
+	        if (isset($_authList[$uid])) {
+	            return $_authList[$uid];
+	        }
+	        if( $this->_config['AUTH_TYPE']==2 && isset($_SESSION['_MENU_LIST_'.$uid])){
+	            return $_SESSION['_MENU_LIST_'.$uid];
+	        }
+
+	        //读取用户所属用户组
+	        $groups = $this->getGroups($uid);
+	        $ids = array();//保存用户所属用户组设置的所有权限规则id
+	        foreach ($groups as $g) {
+	            $ids = array_merge($ids, explode(',', trim($g['rules'], ',')));
+	        }
+	        $ids = array_unique($ids);
+	        if (empty($ids)) {
+	            $_authList[$uid] = array();
+	            return array();
+	        }
+
+	        $map=array(
+	            'id'=>array('in',$ids),
+	            'status'=>1,
+	            'is_menu'=>1
+	        );
+	        //读取用户组所有权限规则
+	        $rules = db()->name($this->_config['AUTH_RULE'])->where($map)->field('id,name,title,pid,icon')->select();
+	        
+	        $authList = list_to_tree($rules, 'id', 'pid', '_child', 0);
+	        
+	        $_authList[$uid] = $authList;
+	        if($this->_config['AUTH_TYPE']==2){
+	            //规则列表结果保存到session
+	            $_SESSION['_MENU_LIST_'.$uid]=$authList;
+	        }
+
+	        return $authList;
+	    }
+
+	    /**
+	     * 获得菜单对应关系
+	     * @param integer $uid  用户id
+	     */
+	    public function getMenuAndPid($uid) {
+	        $memuArr = $this->getMenu($uid);
+	        $out = array();
+	        foreach ((array)$memuArr as $k=>$vo) {
+	          if(isset($vo['_child'])){
+	            foreach ((array)$vo['_child'] as $kk => $voo) {
+	              if(isset($voo['_child'])){
+	                foreach ((array)$voo['_child'] as $kkk => $vooo) {
+	                  $out[strtolower((explode('/', $vooo['name'])[0]).'/'.(explode('/', $vooo['name'])[1]))] = $vooo['pid'];
+	                }
+	              }
+	            }
+	          }
+	        } 
+	        return $out;
+	    }
 	}
+
 
 3、使用
 	
@@ -256,6 +332,11 @@
 	if(!$this->auth->check($IN_URL, $uid)){
 		//未通过
 	}
+	
+	//获取用户后台的菜单
+	$this->auth->getMenu(UID);
+	//获得菜单对应关系 用来高亮菜单
+	$this->auth->getMenuAndPid(UID);
 
 
 
