--- a/php/tp5教程/8.数据库-Model.md
+++ b/php/tp5教程/8.数据库-Model.md
@@ -158,6 +158,7 @@ validate/Article.php -- 文件
 	    protected $rule = [
 	        'title'  =>  'require|max:25',
 	        'status'   => 'number|between:0,1',
+	        'ok'=>'check' //自定义
 	    ];
 	    
 	    protected $message = [
@@ -170,7 +171,16 @@ validate/Article.php -- 文件
 	    protected $scene = [
 	        'add'   =>  ['title','status'],
 	        'edit'  =>  ['title'],
-	    ];    
+	    ];
+
+	    // 自定义验证规则
+	    protected function checSex($value,$rule,$data)
+	    {
+	    	dump($value);
+	    	dump($rule);
+	    	dump($data);
+	    	return true;
+	    }    
 	}
 
 
@@ -383,6 +393,24 @@ validate/Article.php -- 文件
 	Validate::gt(10,8); // true
 	// 正则验证
 	Validate::regex(100,'\d+'); // true
+	
+	//模型验证  
+	$adminModel = new AdminModel;
+    // 调用当前模型对应的adminModel验证器类进行数据验证
+    $result = $adminModel->validate(true)->save($postArr);
+    if(false === $result){
+        // 验证失败 输出错误信息
+        dump($adminModel->getError());
+    }
+
+	//控制器验证
+	$result = $this->validate($data,'Admin');
+    if(true !== $result){
+        // 验证失败 输出错误信息
+        dump($result);
+    }
+
+
 
 7、 验证规则
 
